--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <body style="background-image: url('https://cdn-images-1.medium.com/max/1200/1*MyKDLRda6yHGR_8kgVvckg.png');background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%;">
 
         <center>
-            <h1 style="border:orange; border-width:5px; border-style:solid; border-radius: 5px; width: 70%;">!!!!! Machine Learning Operations Web Application Demo !!!!!</h1>
+            <h1 style="border:orange; border-width:5px; border-style:solid; border-radius: 5px; width: 95%;">!!&#129395; Banking Customer Churn Prediction Machine Learning Web Application &#129395;!!</h1>
         </center>
         
         <div style="display: flex;" >    
