--- a/templates/output.html
+++ b/templates/output.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div style="margin-top: 35%; margin-left:-10%;">                
-                        <button form="1_form" style="border-radius: 5px ;margin-top: 5%; width: 100px; height: 30px; font-size : 18px; "><a href="http://127.0.0.1:8000/form"> <b>Go Back</b> </a></button>
+                        <button form="1_form" style="border-radius: 5px ;margin-top: 5%; width: 100px; height: 30px; font-size : 18px; "><a href="https://mlopsdem.azurewebsites.net/form"> <b>Go Back</b> </a></button>
                 </div>
 
             </div>    
